--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,11 @@ android {
 }
 
 dependencies {
+    def recyclerview_version = "1.0.0"
 
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:$recyclerview_version"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.cardview:cardview:1.0.0'
