--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
-        <activity android:name=".listdata"></activity>
+        <activity android:name=".recycle"></activity>
+        <activity android:name=".userDetail" />
+        <activity android:name=".listdata" />
         <activity android:name=".constrain" />
         <activity android:name=".grid" />
         <activity android:name=".Linear" />
